--- a/ProjectTreinritten/appsettings.json
+++ b/ProjectTreinritten/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ProjectTreinritten-996BC138-68F7-4E86-81F8-0441A6D3C430;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQL_VIVES;Database=TreinProject;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
